navbar expand collapse button center align problem solved

--- a/geonode/static/geonode/css/navbar-geodash.css
+++ b/geonode/static/geonode/css/navbar-geodash.css
@@ -112,7 +112,8 @@
 {
     position: absolute;
     top:71px;
-    left:50%;
+    width: 100%;
+    text-align: center;
     z-index:999999;
     display: none;
 }
